# FurShader

./: CMakeLists.txt
shaders/: fur.frag  minimal330.geom  minimal330.vert
src/: main.cpp  simpleViewer.cpp  simpleViewer.h  textfile.cpp  viewerInterface.cpp  viewerInterface.h  viewerInterface.ui
